--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -26,7 +25,6 @@ jobs:
         run: ./mvnw -B package
         
   test:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -65,3 +63,5 @@ jobs:
         with:
           name: ${{ github.repository }}
           path: target/${{ github.repository }}-*.jar
+      - name: action-maven-publish
+        uses: samuelmeuli/action-maven-publish@v1.4.0
